@@ -210,7 +210,10 @@ namespace MeGUI
         private void loadSelectedProfiles()
         {
             string file = Path.Combine(GetSaveFolder(path), "SelectedProfiles.xml");
-            if (!File.Exists(file)) return;
+            if (!File.Exists(file)) 
+                return;
+
+            deleteDeprecatedEntries(file);
 
             using (Stream s = File.OpenRead(file))
             {
@@ -240,6 +243,53 @@ namespace MeGUI
                     MessageBox.Show("List of selected profiles could not be loaded.", "Error loading profile", MessageBoxButtons.OK);
                 }
             }
+        }
+
+#warning delete block some months after the next stable release
+        private void deleteDeprecatedEntries(String strFile)
+        {
+            String line;
+            StringBuilder sbNewFile = new StringBuilder();
+            int counter = 0, iBlock = 0;
+            List<int> arrDeprecated = new List<int>();
+            StreamReader file = new StreamReader(strFile);
+            
+            while ((line = file.ReadLine()) != null)
+            {
+                if (line.Equals("  <ArrayOfString>"))
+                {
+                    iBlock++;
+                    counter = 0;
+                }
+                counter++;
+                if (iBlock == 1 && (line.Equals("    <string>Snow</string>") || line.Equals("    <string>Aud-X MP3</string>") || line.Equals("    <string>Winamp AAC</string>") || line.Equals("    <string>FAAC</string>")))
+                    arrDeprecated.Add(counter);
+                else if (iBlock == 4 && (line.Equals("    <string>Snow</string>") || line.Equals("    <string>Aud-X MP3</string>") || line.Equals("    <string>Winamp AAC</string>") || line.Equals("    <string>FAAC</string>")))
+                {
+                    if (line.Contains("Snow"))
+                        sbNewFile.AppendLine("    <string>x264</string>");
+                    else
+                        sbNewFile.AppendLine("    <string>Aften AC-3</string>");
+                }
+                else if (iBlock == 2)
+                {
+                    bool bDelete = false;
+                    foreach (int i in arrDeprecated)
+                    {
+                        if (i == counter)
+                            bDelete = true;
+                    }
+                    if (!bDelete)
+                        sbNewFile.AppendLine(line);
+                }
+                else
+                    sbNewFile.AppendLine(line);
+            }
+            file.Close();
+
+            StreamWriter newfile = new StreamWriter(strFile);
+            newfile.Write(sbNewFile);
+            newfile.Close();
         }
 
         public void LoadProfiles()
